<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ntok</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_profile">Profile</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="confirm">계속</string>

    <!-- Strings related to login -->
    <string name="phone_number">Your phone number</string>
    <string name="country_code">Country code</string>
    <string name="verification_msg">enter </string>
    <string name="verification_code">Verification Code</string>


    <string name="action_reply">Reply</string>

    // For intro screen slider
    <string name="title_activity_welcome">Home Screen</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="next">Next</string>

    <string name="uri_scheme_map">https://maps.googleapis.com/maps/api/staticmap?</string>
    <string name="map_zoom">15</string>
    <string name="map_size">600x300</string>
    <string name="map_type">roadmap</string>
    <string name="map_color">red</string>

    <string name="no_internet_image">Unable to upload image. Please check your internet connection.</string>
    <string name="no_internet_location">Unable to share your location. Please check your internet connection.</string>
    <string name="no_internet_video">Unable to upload video. Please check your internet connection.</string>
    <string name="no_internet_audio">Unable to upload audio file. Please check your internet connection.</string>
    <string name="no_internet_contact">Unable to share contact number. Please check your internet connection.</string>
    <string name="network_problem">Unable to connect with server. Please try again?</string>

    <string name="google_static_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCyfYp_Ab7EmSobSZmZyrkG80DtnYYpfds
    </string>


    <string name="cancel">Cancel</string>
    <string name="gps_network_not_enabled">Enable Location</string>
    <string name="open_location_settings">Open setting</string>
    <string name="enter_group_name">Enter group name</string>

    <string name="pick_image_intent_text">Choose an image</string>
    <string name="invalid_code">Invalid Otp</string>
    <string name="crop_activity_title">Crop Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="slide_1_title">Ntok</string>
    <string name="slide_1_desc">Ntok에 오신걸 환영합니다!</string>

    <string name="slide_2_title">Contact Permission</string>
    <string name="slide_2_desc">연락 권한</string>

    <string name="slide_3_title">Camera Permission!</string>
    <string name="slide_3_desc">카메라 권한 </string>

    <string name="slide_4_title">Location Permission!</string>
    <string name="slide_4_desc">위치를 공유할 수 있는 권한</string>

    <string name="slide_5_title">Storage Permission!</string>
    <string name="slide_5_desc">저장 권한</string>

    <string name="slide_6_title">SMS Permission!</string>
    <string name="slide_6_desc">SMS 권한</string>

    <string name="slide_7_title">시작합니다!</string>
    <string name="slide_7_desc">The easiest way to order food from your favourite restaurant!</string>


    <string name="enter_phone_number">정보를 입력하세요.</string>
    <string name="members">Choose at least two members</string>
    <string name="invite">InviteFriends</string>


    <!--
      This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
      For more information, see https://support.google.com/admob/answer/3052638
   -->

    <string name="banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="username">User Name</string>


</resources>
