<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="true">


    <!--<include-->
        <!--android:id="@+id/tool_bar"-->
        <!--layout="@layout/app_bar_main_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/chat_splashicon" />

            <LinearLayout
                android:paddingBottom="@dimen/_16sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_phone_number"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_25sdp"/>

                <EditText
                    android:id="@+id/loginUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text|textPersonName"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_country"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/tae" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:src="@drawable/ic_arrow_down" />

                    <TextView
                        android:id="@+id/tv_country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="+91"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    </LinearLayout>
                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:imeActionId="6"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textSize="@dimen/_15sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:singleLine="true" />

                </LinearLayout>


                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:background="@drawable/button_with_ripple_effect"
                    android:text="@string/confirm"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/white"  />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/verify_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_16sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/chat_splashicon"
                android:layout_marginBottom="@dimen/_15sdp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/verification_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/verification_msg"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ntok.chatmodule.view.OtpView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:length="6" >
                </com.ntok.chatmodule.view.OtpView>

            </LinearLayout>

            <Button
                android:id="@+id/confirm_otp_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:background="@drawable/button_with_ripple_effect"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/resend_waiting_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_12sdp"
                />
            <TextView
                android:id="@+id/resend_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="Resend Code"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_8sdp"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/appTheme"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/back_button_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:padding="@dimen/_15sdp"
        android:visibility="gone"
        />
</RelativeLayout>
